# python-fastapi-master

./: .gitignore  Dockerfile  docker-compose.yml  readme.md
app/: db.py  dev.sqlite3  invoke.json  main.py  pyproject.toml  serverless.yml
app/tests/: test_main.py
app/views/: __init__.py  health_view.py  user_view.py
docs/: 00-software.md  90-cheat-sheet.md
volume/: db.py  main.py  pyproject.toml
volume/tests/views/: test_health_view.py  test_user_view.py
volume/views/: __init__.py  conversation_view.py  health_view.py  user_view.py
