[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
mangum = "^0.17.0"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.2"
aiosqlite = "^0.19.0"
httpx = "^0.25.2"
pytest-cov = "^4.1.0"
sqlite-web = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
