[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
mangum = "^0.17.0"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.2"
aiosqlite = "^0.19.0"
httpx = "^0.25.2"
pytest-cov = "^4.1.0"
sqlite-web = "^0.6.1"
ruff = "^0.4.3"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = [
    "ALL", 
]
lint.ignore = [
    "E501", # line too long, handled by black
    "F405", # そんなモジュールないかも
    "F403", # from module import * を使うな
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "B904", # raise from err
    

    "G004", # `logging-f-string` : loggingでf-stringを使いたいので無視する
    "PD901", #すでに`df`という変数をいろんなところで使っているため
    "PD002", #すでにpandasで`inplace=True`はいろんなところで使っているため
    "RUF001", # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF002",# 全角記号など`ambiguous unicode character`も使いたいため
    "RUF003",# 全角記号など`ambiguous unicode character`も使いたいため
    "PLC1901", # compare-to-empty-string : `if a == "`のように空文字列で直接比較したいときがあるため
    "PLR2004", # magic-value-comparison: listのサイズで判定するときがよくあるため
    "ANN101", # missing-type-self: 引数selfには型ヒントは付けていないため
    "ANN102", # missing-type-cls: 引数clsには型ヒントは付けていないため
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ERA", # : 役立つこともあるが、コメントアウトしていないコードも警告されるので無視する

    # いずれ無視しないようにする
    "ANN201", # missing-return-type-public-function: 
    "ANN202", # missing-return-type-private-function:
    "PLR",  # pylint Refactor 
    "ERA001", # Found commented-out code

    # 以下のルールはannofabcliのコードに合っていないので無効化した
    "RSE", # flake8-raise
    "D", # pydocstyle
    "C90", # mccabe 
    "T20", # flake8-print
    "SLF", #  flake8-self
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "TRY", # tryceratops 
    "COM", # flake8-commas 
    "S", # flake8-bandit
    "EM",#flake8-errmsg
    "EXE", # flake8-executable
    "ICN", # flake8-import-conventions
    "RET",#flake8-return
    "SIM",#flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", #pathlibを使わないコードが多いので、除外する
    "ISC", #flake8-implicit-str-concat
    "N", # pep8-naming
    "PT", # flake8-pytest-style
]
lint.fixable = ["ALL"]
target-version = "py39"

# Exclude a variety of commonly ignored directories.
exclude = [".venv", "venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
